'fixed' error messaging format